1. Added visibility algorithm. 2. Added a roadmap builder delegate to display the roadmap. 3. Modified construction of CkwsPlusRoadmap.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -13,5 +13,11 @@ kwsPlus_HEADERS = \
 	reedsSheppDirectPath.h \
 	reedsSheppSteeringMethod.h \
 	kitMat3.h \
-	kwsPlusRoadmap.h
+	kwsPlusRoadmap.h \
+	kwsPlusDrawRdmBuilderDelegate.h \
+	hppActiveDofSetter.h \
+	hppConfigurationShooter.h \
+	hppShooterActiveDof.h \
+	hppVisRdmBuilder.h 
+
 
