Reorganization of documentation. Added class CkwsPlusDirectPath that manages extraction and reverse of direct paths.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -9,6 +9,7 @@ kwsPlusdir = @includedir@/kwsPlus
 kwsPlus_HEADERS = \
 	flicDirectPath.h \
 	flicSteeringMethod.h \
+	kwsPlusDirectPath.h \
 	directPathVector.h \
 	reedsSheppDirectPath.h \
 	reedsSheppSteeringMethod.h \
