Added a class to test whether a configuration constraint is continuous and is a projection.

--- a/unitTesting/Makefile.am
+++ b/unitTesting/Makefile.am
@@ -8,7 +8,8 @@ TESTS = \
 noinst_PROGRAMS = \
 	testFlicMaxDeriv \
 	testFlicBoundObj \
-	testFlicStraightLine 
+	testFlicStraightLine \
+	testProjectionConstraint
 
 license: clean-license \
 	testFlicMaxDeriv.kab \
