Added a class to test whether a configuration constraint is continuous and is a projection.

--- a/unitTesting/Makefile.am
+++ b/unitTesting/Makefile.am
@@ -8,8 +8,7 @@ TESTS = \
 noinst_PROGRAMS = \
 	testFlicMaxDeriv \
 	testFlicBoundObj \
-	testFlicStraightLine \
-	testProjectionConstraint
+	testFlicStraightLine 
 
 license: clean-license \
 	testFlicMaxDeriv.kab \
