--- a/kwsPlus.pc.in
+++ b/kwsPlus.pc.in
@@ -7,5 +7,5 @@ Name: @PACKAGE@
 Description: Extension to KineoWorks software
 Version: @VERSION@
 Requires: kwsIO
-Libs: -L${libdir} -lkwsPlus 
-Cflags: -I${includedir}/kwsPlus 
+Libs: -L${libdir} -lkwsPlus @LAPACK_LIBS@	
+Cflags: -I${includedir}/kwsPlus @LAPACK_CFLAGS@
