--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,8 +19,9 @@ libkwsPlus_la_SOURCES = \
 	hppVisRdmBuilder.cpp
 
 
-libkwsPlus_la_CPPFLAGS = -I$(srcdir)/../include $(KWSIO_CFLAGS) 
+libkwsPlus_la_CPPFLAGS = -I$(srcdir)/../include $(KWSIO_CFLAGS)  $(LAPACK_CFLAGS)
 libkwsPlus_la_LDFLAGS =\
 	$(KWSIO_LIBS) 	\
+	$(LAPACK_LIBS)  \
 	-release ${PACKAGE_VERSION}
 
