2007/12/18 	10.Added CkwsPlusLTRdmBuilder class. Derives from any diffusing 	roadmap builder class and implements a local tree diffusing method.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -18,5 +18,6 @@ kwsPlus_HEADERS = \
 	hppConfigurationShooter.h \
 	hppShooterActiveDof.h \
 	hppVisRdmBuilder.h \
-	kwsPlusPCARdmBuilder.h 
+	kwsPlusPCARdmBuilder.h \
+	kwsPlusLTRdmBuilder.h 
 
