Addition of class CkwsPlusDPLinear that checks collision using user-defined max derivative ratio. Initial commit of empty functions.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -19,5 +19,6 @@ kwsPlus_HEADERS = \
 	hppShooterActiveDof.h \
 	hppVisRdmBuilder.h \
 	kwsPlusPCARdmBuilder.h \
-	kwsPlusLTRdmBuilder.h 
+	kwsPlusLTRdmBuilder.h \
+	kwsPlusDPLinear.h
 
