--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,8 @@ libkwsPlus_la_SOURCES = \
 	kitMat3.cpp \
 	hppConfigurationShooter.cpp \
 	hppShooterActiveDof.cpp \
-	hppVisRdmBuilder.cpp
+	hppVisRdmBuilder.cpp \
+	kwsPlusDPLinear.cpp
 
 
 libkwsPlus_la_CPPFLAGS = -I$(srcdir)/../include $(KWSIO_CFLAGS)  $(LAPACK_CFLAGS)
