addition of corresponding steering method to kwsPlusDPLinear. implementation with empty functions.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -20,5 +20,6 @@ kwsPlus_HEADERS = \
 	hppVisRdmBuilder.h \
 	kwsPlusPCARdmBuilder.h \
 	kwsPlusLTRdmBuilder.h \
-	kwsPlusDPLinear.h
+	kwsPlusDPLinear.h \
+	kwsPlusSMLinear.h 
 
