12. Added CkwsPlusRoadmap class. Enable user to remove a set of nodes and a set of edges from a roadmap.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -21,5 +21,6 @@ kwsPlus_HEADERS = \
 	kwsPlusPCARdmBuilder.h \
 	kwsPlusLTRdmBuilder.h \
 	kwsPlusDPLinear.h \
-	kwsPlusSMLinear.h 
+	kwsPlusSMLinear.h \
+	kwsPlusRoadmap.h
 
