13. Added CkwsPlusDistance class. Enable user to use other types of steering method for calculating distance.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -22,5 +22,7 @@ kwsPlus_HEADERS = \
 	kwsPlusLTRdmBuilder.h \
 	kwsPlusDPLinear.h \
 	kwsPlusSMLinear.h \
-	kwsPlusRoadmap.h
+	kwsPlusRoadmap.h \
+	kwsPlusDistance.h
+
 
