Added class CflicDistance that provides an approximation of the length of flic direct path between two configurations. Moved static functions of flicDirectPath.cpp into a class CflicManager in order to use these functions in other files.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -7,6 +7,7 @@
 
 kwsPlusdir = @includedir@/kwsPlus
 kwsPlus_HEADERS = \
+	flicDistance.h \
 	flicDirectPath.h \
 	flicSteeringMethod.h \
 	kwsPlusDirectPath.h \
