Handle oriented steering method in CflicDistance. Added CkwsPlusDistance.cpp in src/Makefile.am, removed by mistake.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -20,6 +20,7 @@ libkwsPlus_la_SOURCES = \
 	kwsPlusDPLinear.cpp \
 	kwsPlusSMLinear.cpp \
 	kwsPlusRoadmap.cpp \
+	kwsPlusDistance.cpp \
 	flicDistance.cpp \
 	flicManager.cpp
 
