Method CkwsPlusSteeringMethodFactory::makeSteeringMethod takes a boolean as input to specify whether steering method is oriented.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -24,6 +24,7 @@ kwsPlus_HEADERS = \
 	kwsPlusDPLinear.h \
 	kwsPlusSMLinear.h \
 	kwsPlusRoadmap.h \
-	kwsPlusDistance.h
+	kwsPlusDistance.h \
+	kwsPlusSteeringMethodFactory.h
 
 
