Implemented a stop planning roadmap builder delegate.
This delegate interrupts upon request the planning process of the
roadmap builder delegate it is attached to.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -28,6 +28,5 @@ kwsPlus_HEADERS = \
 	kwsPlusSteeringMethodFactory.h \
 	kwsPlusDistanceFactory.h \
 	kwsPlusDiffusionNodePickerFactory.h \
-	kwsPlusDiffusionShooterFactory.h
-
-
+	kwsPlusDiffusionShooterFactory.h \
+	kwsPlusStopRdmBuilderDelegate.h
