Added CkwsIPPRdmBuilder2 that derives from CkwsIPPRdmBuilder for test purposes.
CkwsIPPRdmBuilder2::buildOneStep() calls method of parent class and test
that roadmap is correctly conditioned.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -35,4 +35,5 @@ kwsPlus_HEADERS = \
 	kwsPlusNode.h \
 	kwsPlusNodeFactory.h \
 	kwsPlusEdge.h \
-	kwsPlusEdgeFactory.h
+	kwsPlusEdgeFactory.h \
+	kwsIPPRdmBuilder2.h
