modified:   include/Makefile.am 	new file:   include/kwsPlusKPCARdmBuilder.h
New Roadmap Builder CKwsPlusKPCARdmBuilder that generalizes the
PCARdmBuilder to any steering method.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -20,6 +20,7 @@ kwsPlus_HEADERS = \
 	hppShooterActiveDof.h \
 	hppVisRdmBuilder.h \
 	kwsPlusPCARdmBuilder.h \
+	kwsPlusKPCARdmBuilder.h \
 	kwsPlusLTRdmBuilder.h \
 	kwsPlusDPLinear.h \
 	kwsPlusSMLinear.h \
