Distribute headers in subdirectories.
  Headers are distributed into the following directories:
    include/kwsPlus/util,
    include/kwsPlus/directPath
    include/kwsPlus/roadmap.
  They are installed accordingly in ${includedir}/kwsPlus.

  Copies of the header files are still installed in the former
  directory, but a warning message suggests users to install new
  versions of the headers.

--- a/doc/kwsPlus.dox.in
+++ b/doc/kwsPlus.dox.in
@@ -206,8 +206,11 @@ SHOW_DIRECTORIES       = NO
 #---------------------------------------------------------------------------
 FILE_PATTERNS          = *.h *.idl
 EXCLUDE_PATTERNS       = 
-INPUT                  = @top_srcdir@/include \
-                         @srcdir@/additionalDoc
+INPUT                  = \
+			@top_srcdir@/include/kwsPlus/directPath \
+			@top_srcdir@/include/kwsPlus/roadmap \
+			@top_srcdir@/include/kwsPlus/util \
+                        @srcdir@/additionalDoc
 
 #---------------------------------------------------------------------------
 # configuration options related to inserting images
