--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -5,36 +5,75 @@
 # Author: Florent Lamiraux
 #
 
+kwsPlusutildir = @includedir@/kwsPlus/util
+kwsPlusutil_HEADERS = \
+	kwsPlus/util/kitMat3.h 
+
+kwsPlusrdmdir = @includedir@/kwsPlus/roadmap
+kwsPlusrdm_HEADERS = \
+	kwsPlus/roadmap/hppActiveDofSetter.h \
+	kwsPlus/roadmap/hppConfigurationShooter.h \
+	kwsPlus/roadmap/hppShooterActiveDof.h \
+	kwsPlus/roadmap/hppVisRdmBuilder.h \
+	kwsPlus/roadmap/kwsPlusDiffusionNodePickerFactory.h \
+	kwsPlus/roadmap/kwsPlusDiffusionShooterFactory.h \
+	kwsPlus/roadmap/kwsPlusEdge.h \
+	kwsPlus/roadmap/kwsPlusEdgeFactory.h \
+	kwsPlus/roadmap/kwsPlusKPCARdmBuilder.h \
+	kwsPlus/roadmap/kwsPlusLTRdmBuilder.h \
+	kwsPlus/roadmap/kwsPlusNode.h \
+	kwsPlus/roadmap/kwsPlusNodeFactory.h \
+	kwsPlus/roadmap/kwsPlusPCARdmBuilder.h \
+	kwsPlus/roadmap/kwsPlusRoadmap.h \
+	kwsPlus/roadmap/kwsPlusStopRdmBuilderDelegate.h \
+	kwsPlus/roadmap/kwsPlusTalkingBuilder.h \
+	kwsPlus/roadmap/kwsPlusTalkingShooter.h 
+
+kwsPlusdpdir = @includedir@/kwsPlus/directPath
+kwsPlusdp_HEADERS = \
+	kwsPlus/directPath/directPathVector.h \
+	kwsPlus/directPath/flicDirectPath.h \
+	kwsPlus/directPath/flicDistance.h \
+	kwsPlus/directPath/flicSteeringMethod.h \
+	kwsPlus/directPath/kwsPlusDPLinear.h \
+	kwsPlus/directPath/kwsPlusDirectPath.h \
+	kwsPlus/directPath/kwsPlusDistance.h \
+	kwsPlus/directPath/kwsPlusDistanceFactory.h \
+	kwsPlus/directPath/kwsPlusSMLinear.h \
+	kwsPlus/directPath/kwsPlusSteeringMethodFactory.h \
+	kwsPlus/directPath/reedsSheppDirectPath.h \
+	kwsPlus/directPath/reedsSheppSteeringMethod.h
+
+# Keep installing headers as previously with warnings
+
 kwsPlusdir = @includedir@/kwsPlus
 kwsPlus_HEADERS = \
-	flicDistance.h \
-	flicDirectPath.h \
-	flicSteeringMethod.h \
-	kwsPlusDirectPath.h \
-	directPathVector.h \
-	reedsSheppDirectPath.h \
-	reedsSheppSteeringMethod.h \
-	kitMat3.h \
-	hppActiveDofSetter.h \
-	hppConfigurationShooter.h \
-	hppShooterActiveDof.h \
-	hppVisRdmBuilder.h \
-	kwsPlusPCARdmBuilder.h \
-	kwsPlusKPCARdmBuilder.h \
-	kwsPlusLTRdmBuilder.h \
-	kwsPlusDPLinear.h \
-	kwsPlusSMLinear.h \
-	kwsPlusRoadmap.h \
-	kwsPlusDistance.h \
-	kwsPlusSteeringMethodFactory.h \
-	kwsPlusDistanceFactory.h \
-	kwsPlusDiffusionNodePickerFactory.h \
-	kwsPlusDiffusionShooterFactory.h \
-	kwsPlusStopRdmBuilderDelegate.h \
-	kwsPlusTalkingShooter.h \
-	kwsPlusTalkingBuilder.h \
-	kwsPlusNode.h \
-	kwsPlusNodeFactory.h \
-	kwsPlusEdge.h \
-	kwsPlusEdgeFactory.h \
-	kwsIPPRdmBuilder2.h
+	kwsPlus/hppActiveDofSetter.h \
+	kwsPlus/hppConfigurationShooter.h \
+	kwsPlus/hppShooterActiveDof.h \
+	kwsPlus/hppVisRdmBuilder.h \
+	kwsPlus/kwsPlusDiffusionNodePickerFactory.h \
+	kwsPlus/kwsPlusDiffusionShooterFactory.h \
+	kwsPlus/kwsPlusEdge.h \
+	kwsPlus/kwsPlusEdgeFactory.h \
+	kwsPlus/kwsPlusKPCARdmBuilder.h \
+	kwsPlus/kwsPlusLTRdmBuilder.h \
+	kwsPlus/kwsPlusNode.h \
+	kwsPlus/kwsPlusNodeFactory.h \
+	kwsPlus/kwsPlusPCARdmBuilder.h \
+	kwsPlus/kwsPlusRoadmap.h \
+	kwsPlus/kwsPlusStopRdmBuilderDelegate.h \
+	kwsPlus/kwsPlusTalkingBuilder.h \
+	kwsPlus/kwsPlusTalkingShooter.h \
+	kwsPlus/directPathVector.h \
+	kwsPlus/flicDirectPath.h \
+	kwsPlus/flicDistance.h \
+	kwsPlus/flicSteeringMethod.h \
+	kwsPlus/kwsPlusDPLinear.h \
+	kwsPlus/kwsPlusDirectPath.h \
+	kwsPlus/kwsPlusDistance.h \
+	kwsPlus/kwsPlusDistanceFactory.h \
+	kwsPlus/kwsPlusSMLinear.h \
+	kwsPlus/kwsPlusSteeringMethodFactory.h \
+	kwsPlus/reedsSheppDirectPath.h \
+	kwsPlus/reedsSheppSteeringMethod.h
