--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,8 +27,7 @@ libkwsPlus_la_SOURCES = \
 	kwsPlusEdgeFactory.cpp \
 	flicDistance.cpp \
 	flicManager.cpp \
-	kwsPlusStopRdmBuilderDelegate.cpp \
-	kwsIPPRdmBuilder2.cpp
+	kwsPlusStopRdmBuilderDelegate.cpp 
 
 
 libkwsPlus_la_CPPFLAGS = -I$(srcdir)/../include $(KWSIO_CFLAGS)  $(LAPACK_CFLAGS)
