--- a/kwsPlus.pc.in
+++ b/kwsPlus.pc.in
@@ -10,4 +10,4 @@ Description: Extension to KineoWorks software
 Version: @VERSION@
 Requires: @KWSIO_REQD@
 Libs: -L${libdir} -lkwsPlus @LAPACK_LIBS@	
-Cflags: -I${includedir}/kwsPlus @LAPACK_CFLAGS@
+Cflags: -I${includedir} -I${includedir}/kwsPlus @LAPACK_CFLAGS@
