--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,22 @@
-Makefile.in
+INSTALL
+*Makefile.in
+_build*
 aclocal.m4
-autom4te.cache
-config.guess
-config.sub
+autom4te.cache/
+config.h.in
+config.h.in~
 configure
-depcomp
-install-sh
-ltmain.sh
-missing
++committed/
+,*
+testsuite.log
+build-aux/config.guess
+build-aux/config.sub
+build-aux/depcomp
+build-aux/install-sh
+build-aux/libtool.m4
+build-aux/ltmain.sh
+build-aux/ltoptions.m4
+build-aux/ltsugar.m4
+build-aux/ltversion.m4
+build-aux/lt~obsolete.m4
+build-aux/missing
