Append library in pkg-config file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,8 @@ SETUP_PROJECT()
 SEARCH_FOR_BOOST()
 ADD_REQUIRED_DEPENDENCY ("kwsIO >= 1.1")
 
+PKG_CONFIG_APPEND_LIBS(${PROJECT_NAME})
+
 ADD_SUBDIRECTORY(src)
 
 SETUP_PROJECT_FINALIZE()
