Comply with hpp-kwsio v1.2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ SET(CXX_DISABLE_WERROR 1)
 SETUP_PROJECT()
 
 SEARCH_FOR_BOOST()
-ADD_REQUIRED_DEPENDENCY ("kwsIO >= 1.1")
+ADD_REQUIRED_DEPENDENCY ("hpp-kwsio >= 1.2")
 
 PKG_CONFIG_APPEND_LIBS(${PROJECT_NAME})
 
