--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,6 @@ ADD_LIBRARY(${PROJECT_NAME}
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 
-PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} kwsIO)
+PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} hpp-kwsio)
 
 INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})
