Install shared library with project version.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,8 @@
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
 INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
 
+SET(LIBRARY_NAME ${PROJECT_NAME})
+
 SET(${PROJECT_NAME}_SOURCES
   flic-direct-path.cc
   flic-steering-method.cc
@@ -38,7 +40,7 @@ SET(${PROJECT_NAME}_SOURCES
   stop-rdm-builder-delegate.cc
   )
 
-ADD_LIBRARY(${PROJECT_NAME}
+ADD_LIBRARY(${LIBRARY_NAME}
   SHARED
   ${${PROJECT_NAME}_SOURCES}
   )
@@ -46,6 +48,8 @@ ADD_LIBRARY(${PROJECT_NAME}
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 
-PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} hpp-kwsio)
+SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})
 
-INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})
+PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-kwsio)
+
+INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})
