--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ SET(CXX_DISABLE_WERROR 1)
 SETUP_PROJECT()
 
 SEARCH_FOR_BOOST()
+ADD_REQUIRED_DEPENDENCY ("hpp-util >= 0.8")
 ADD_REQUIRED_DEPENDENCY ("hpp-kwsio >= 1.2")
 
 PKG_CONFIG_APPEND_LIBS(${PROJECT_NAME})
